chore: Refactor code to introduce BlockEventPublisher for Byron and Shelley blocks